hexagons still not working but i cant care anymore

--- a/main.html
+++ b/main.html
@@ -26,6 +26,7 @@
             <div class="task-controls">
                 <button class="start-button">Start</button>
             </div>
+            <div class="hexagons"></div>
         </div>
     </div>
     <script src="script.js"></script>
